<resources>
    <string name="app_name">Himstudy</string>
    <string name="button">Show toast</string>
    <string name="textview">TextView</string>
    <string name="title_activity_main2">Himstudy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HimachalStudy</string>
    <string name="nav_header_subtitle">Learning Platform</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_articles">Articles</string>
    <string name="menu_current_affairs">Current Affairs</string>
    <string name="menu_jobs">Jobs</string>
    <string name="menu_has_mains">HAS Mains</string>
    <string name="menu_syllabus">Syllabus</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_papers">Papers</string>
    <string name="menu_about">About</string>
</resources>