<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_articles"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_articles"/>
        <item
                android:id="@+id/nav_current_affairs"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_current_affairs"/>
        <item
                android:id="@+id/nav_jobs"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_jobs"/>
        <item
                android:id="@+id/nav_has_mains"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_has_mains"/>
        <item
                android:id="@+id/nav_quiz"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_quiz"/>
        <item
                android:id="@+id/nav_syllabus"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_syllabus"/>
        <item
                android:id="@+id/nav_papers"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_papers"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_about"/>
    </group>
</menu>